Fixed a bug in the resize action of the menu on a smaller device. The menu button previously didn't go away, but changed the z-index to 2 from 1 and that fixed the whole thing.

--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -56,6 +56,7 @@ nav #menu {
      font-size: 20px;
      float: left;
      right: 80px;
+     color: #21ebff;
 }
  
 nav #menu li {
@@ -83,114 +84,114 @@ nav #menu li a:hover {
 }
  
 #toggle {
-     position: absolute;
-     right: 30px;
-     top: 20px;
-     font-weight: 300;
-     z-index: 2;
-     width: 30px;
-     height: 30px;
-     cursor: pointer;
-     float: right;
-     transition: all 0.6s ease-out;
-     visibility: hidden;
-     opacity: 0;
+      position: absolute;
+      right: 30px;
+      top: 20px;
+      font-weight: 300;
+      z-index: 2;
+      width: 30px;
+      height: 30px;
+      cursor: pointer;
+      float: right;
+      transition: all 0.6s ease-out;
+      visibility: hidden;
+      opacity: 0;
 }
- 
+
 .close-btn {
-     position: absolute;
+      position: absolute;
       right: 16px;
       font-weight: 300;
       z-index: 2;
       cursor: pointer;
       top: -2px;
       line-height: 80px;
+      color: #fff;
+}
+
+#resize {
+      z-index: 2;
+      top: 0px;
+      position: fixed;
+      background: #000;
+      width: 100%;
+      height: 100%;
+      visibility: hidden;
+      opacity: 0;
+      transition: all 1s ease-out;
+}
+
+#resize #menu {
+      height: 90px;
+      position: absolute;
+      left: 45%;
+      transform: translateX(-40%);
+      text-align: center;
+      display: table-cell;
+      vertical-align: center;
+}
+
+#resize #menu li {
+      display: block;
+      text-align: center;
+      padding: 10px 0;
+      font-size: 50px;
+      min-height: 50px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all 0.6s ease-out;
+}
+
+#resize li:nth-child(1) {
+      margin-top: 140px;
+}
+
+#resize #menu li a {
       color: #21ebff;
 }
- 
-#resize {
-     z-index: 1;
-     top: 0px;
-     position: fixed;
-     background: #000;
-     width: 100%;
-     height: 100%;
-     visibility: hidden;
-     opacity: 0;
-     transition: all 1s ease-out;
-}
- 
-#resize #menu {
-     height: 90px;
-     position: absolute;
-     left: 45%;
-     transform: translateX(-40%);
-     text-align: center;
-     display: table-cell;
-     vertical-align: center;
-}
- 
-#resize #menu li {
-     display: block;
-     text-align: center;
-     padding: 10px 0;
-     font-size: 50px;
-     min-height: 50px;
-     font-weight: bold;
-     cursor: pointer;
-     transition: all 0.6s ease-out;
-}
- 
-#resize li:nth-child(1) {
-     margin-top: 140px;
-}
- 
-#resize #menu li a {
-     color: #21ebff;
-}
- 
+
 #resize #menu li a:hover {
-     color: #21ebff;
+      color: #21ebff;
 }
- 
+
 #resize.active {
-     visibility: visible;
-     opacity: 1;
+      visibility: visible;
+      opacity: 1;
 }
- 
+
 @media(max-width: 768px) {
-     #toggle {
-           visibility: visible;
-           opacity: 1;
-           margin-top: 6px;
-           margin-right: 4px;
-           color: #21ebff;
-     }
- 
-     nav #brand {
-           margin-left: 24px;
-           color: #21ebff;
-     }
- 
-     #menu a {
-           font-size: 20px;
-           font-weight: 300;
-           color: #21ebff;
-     }
- 
-     #resize li span {
-           font-weight: bolder;
-     }
- 
-     nav #menu {
-           display: none;
-     }
+      #toggle {
+            visibility: visible;
+            opacity: 1;
+            margin-top: 6px;
+            margin-right: 4px;
+            color: #21ebff;
+      }
+
+      nav #brand {
+            margin-left: 24px;
+            color: #21ebff;
+      }
+
+      #menu a {
+            font-size: 20px;
+            font-weight: 300;
+            color: #21ebff;
+      }
+
+      #resize li span {
+            font-weight: bolder;
+      }
+
+      nav #menu {
+            display: none;
+      }
 }
- 
+
 @media(min-width: 768px) {
-     #resize {
-           visibility: hidden !important;
-     }
+      #resize {
+            visibility: hidden !important;
+      }
 }
  
 /*------------------ navbar ends here ------------- */
